<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout1"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
		android:background="@drawable/bg11">
	    
	    <!-- Title -->
	    <TextView
			android:layout_width="fill_parent"  
			android:layout_height="wrap_content" 
			android:gravity="center" 
			android:textSize="27dp"
			android:textColor="#000000"
			android:text="@string/title_register" >
		</TextView>
		
	    <!-- blank -->	
	    	<TextView
				android:layout_width="fill_parent"  
				android:layout_height="wrap_content" 
				android:text="" >
			</TextView>
	    
	    <!-- Username -->
	
		<TextView
			android:layout_width="fill_parent"  
			android:layout_height="wrap_content" 
			android:text="@string/username" >
		</TextView>
		
		<EditText 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:hint=""
			android:singleLine="true"
			android:id="@+id/newusername">
		</EditText>
		
		<!-- Password -->
		<TextView 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:text="@string/password">
		</TextView>
			
		<EditText 
		    android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:hint=""
			android:singleLine="true"
			android:id="@+id/newpassword" >
		</EditText>
		
		<!-- Submit -->
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			
			<Button 
			    android:layout_width="100dp"
				android:layout_height="wrap_content" 
				android:id="@+id/daftar" 
				android:text="@string/btnDaftar">
			</Button>
			
			<Button 
			    android:layout_width="100dp"
				android:layout_height="wrap_content" 
				android:id="@+id/kembali" 
				android:text="@string/btnKembali">
			</Button>
		</LinearLayout>
	</LinearLayout>
</ScrollView>