<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sapa"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <!-- username/ email -->

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:singleLine="true" >
    </EditText>

    <!-- password -->

    <EditText
        android:id="@+id/passwd_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" >
    </EditText>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:gravity="center">

        <!-- Login -->

        <Button
            android:id="@+id/masuk"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin" >
        </Button>

        <!-- Register -->

        <Button
            android:id="@+id/daftar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/register" >
        </Button>

        <!-- Exit -->

        <Button
            android:id="@+id/close"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/exit" >
        </Button>
    </LinearLayout>
</LinearLayout>
