<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout1"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:background="@drawable/bg37">
			
	    <!-- blank -->
		    <TextView 
			    android:layout_width="fill_parent"  
			    android:layout_height="wrap_content"  
				android:text="" >
			</TextView>
			
			<TextView 
			    android:layout_width="fill_parent"  
			    android:layout_height="wrap_content"  
				android:text="" />
	    
		<!-- Nama Pelapor -->
	    <LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
		
			<TextView
				android:layout_width="90dp"  
				android:layout_height="fill_parent" 
				android:gravity="center_vertical"
				android:textColor="#ffffff"
				android:text="@string/namaPelapor" >
			</TextView>
			
			<EditText 
				android:layout_width="fill_parent" 
				android:layout_height="40dp"
				android:hint=""
				android:singleLine="true"
				android:id="@+id/nama_pelapor">
			</EditText>
		</LinearLayout>
		
		<!-- Lokasi -->
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
			
			<TextView 
				android:layout_width="90dp" 
				android:layout_height="fill_parent" 
				android:gravity="center_vertical"
				android:textColor="#ffffff"
				android:text="@string/lokasi">
			</TextView>
			
			<EditText 
			    android:layout_width="fill_parent" 
				android:layout_height="40dp" 
				android:hint=""
				android:singleLine="true"
				android:id="@+id/lokasi" >
			</EditText>
		</LinearLayout>    
		
	    <!-- Gejala/ Keluhan -->
	    <LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
		
			<TextView
				android:layout_width="90dp"  
				android:layout_height="fill_parent"
				android:gravity="center_vertical"
				android:textColor="#ffffff"
				android:text="@string/gejala" >
			</TextView>
				
			<EditText
			    android:id="@+id/gejala_keluhan"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:ems="10"
			    android:hint=""
			    android:inputType="textMultiLine"
			    android:scrollHorizontally="true" >
	
			</EditText>
		</LinearLayout>   
		
		<!-- Laporan -->
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
			
			<TextView 
				android:layout_width="90dp" 
				android:layout_height="fill_parent"
				android:gravity="center_vertical"
				android:textColor="#ffffff"
				android:text="@string/laporan">
			</TextView>
		
			<EditText
			    android:id="@+id/laporan"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:ems="10"
			    android:hint=""
			    android:inputType="textMultiLine"
			    android:scrollHorizontally="true" >
	
			</EditText>
		</LinearLayout>
		
	    <!-- Tag -->
	    <LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
		
			<TextView
				android:layout_width="90dp"  
				android:layout_height="wrap_content"
				android:textColor="#ffffff"
				android:text="@string/tag" >
			</TextView>
			
			<EditText 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:hint=""
				android:singleLine="true"
				android:id="@+id/tag">
			</EditText>				
		</LinearLayout>
	
		<!-- Keterangan -->
		<TextView
			android:layout_width="fill_parent"  
			android:layout_height="wrap_content"
			android:textColor="#ffffff"
			android:textStyle="italic"
			android:text="@string/keterangan4" >
		</TextView>
	    
		<!-- blank -->
			<TextView 
			    android:layout_width="fill_parent"  android:layout_height="wrap_content" 
				android:gravity="center" android:text="" >
			</TextView>
				
			<TextView 
			    android:layout_width="fill_parent"  android:layout_height="wrap_content" 
				android:gravity="center" android:text="" >
			</TextView>
			
			<TextView 
			    android:layout_width="fill_parent"  android:layout_height="wrap_content" 
				android:gravity="center" android:text="" >
			</TextView>
			
			<TextView 
			    android:layout_width="fill_parent"  android:layout_height="wrap_content" 
				android:gravity="center" android:text="" >
			</TextView>
			
			<TextView 
			    android:layout_width="fill_parent"  android:layout_height="10dp" 
				android:gravity="center" android:text="" >
			</TextView>
		
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			
			<!-- Kirim -->
			<Button 
			    android:layout_width="100dp"
				android:layout_height="wrap_content" 
				android:id="@+id/kirim" 
				android:text="@string/btnKirim">
			</Button>
			
			<!-- Kembali -->
			<Button 
			    android:layout_width="150dp"
				android:layout_height="wrap_content" 
				android:id="@+id/home_report" 
				android:text="@string/btnKembali">
			</Button>
		</LinearLayout>	
	</LinearLayout>
</ScrollView>